Add styling to heading and descriptive text into Contact-me section

--- a/style.css
+++ b/style.css
@@ -315,10 +315,19 @@ main {
 }
 
 /* about section */
-.about_section {
-  gap: 24px;
+.about_base {
+  position: relative;
+  height: 1263px;
   background-color: #fff;
   border-top-right-radius: 85px;
+}
+
+.about_section {
+  height: 90%;
+  top: 0;
+  gap: 24px;
+  /* background-color: #fff;
+  border-top-right-radius: 85px; */
 }
 
 .top {
@@ -383,4 +392,35 @@ main {
   font-size: 15px;
   line-height: 20px;
   color: #253858;
+}
+
+/* contact section */
+.contact-me_section {
+  border-top-left-radius: 85px;
+  padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.contact-me_sect_bg {
+  background-image: url("./back-img/contact_form_shapes-mobile@2x.svg");
+  background-color: var(--primary_b);
+  background-repeat: no-repeat;
+  background-position: right 0 top 21px;
+  background-size: auto;
+}
+
+.contact_title {
+  font-weight: 700;
+  color: #fff;
+  margin-top: 103px;
+}
+
+.contact_txt {
+  font-size: 20px;
+  line-height: 28px;
+  color: #ebebff;
+  text-align: center;
 }
