--- a/style.css
+++ b/style.css
@@ -457,3 +457,26 @@ textarea::placeholder {
   line-height: 24px;
   font-weight: normal;
 }
+
+.submit-button {
+  align-self: flex-start;
+  margin: 22px 0 45px 0;
+  padding: 12px 16px;
+}
+
+.contact-me_section .contact-form .submit-button:active {
+color: #fff;
+background-color: #2230d2;
+}
+
+.contact-me_section .contact-form .submit-button:hover {
+  color: #fff;
+  background-color: #6070ff;
+}
+
+.bottom-separator {
+  width: 100%;
+  background-image: url("./back-img/shape.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
