--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ textarea::placeholder {
 
 .submit-button {
   align-self: flex-start;
-  margin: 22px 0 45px 0;
+  margin-bottom: 20px;
   padding: 12px 16px;
 }
 
