--- a/style.css
+++ b/style.css
@@ -464,14 +464,16 @@ textarea::placeholder {
   padding: 12px 16px;
 }
 
-.contact-me_section .contact-form .submit-button:active {
-  color: #fff;
-  background-color: #2230d2;
-}
-
 .contact-me_section .contact-form .submit-button:hover {
   color: #fff;
   background-color: #6070ff;
+  border: 1px solid #fff;
+}
+
+.contact-me_section .contact-form .submit-button:active {
+  color: #fff;
+  background-color: #2230d2;
+  border: 1px solid #fff;
 }
 
 .bottom-separator {
