--- a/style.css
+++ b/style.css
@@ -32,10 +32,9 @@ body {
   text-align: left;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
 }
 
-/* Colors & Typography */
+/* Colors */
 .neutral_n {
   color: var(--neutral_n);
 }
@@ -52,74 +51,153 @@ body {
   color: var(--primary_b);
 }
 
-.grey {
+.dark_grey {
   color: #7a869a;
 }
 
-.primary_txt {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 600;
+.light_grey {
+  color: #c1c7d0;
 }
 
-.supporting_txt {
-  font-size: 16px;
+.bg_white {
+  background-color: #fff;
+}
+
+.contact_txt {
+  color: #ebebff;
+}
+
+.skills_title {
+  color: #000;
+}
+
+.skill_item {
+  color: #253858;
+  background: #f7f7f9;
+}
+
+.contact_title {
+  color: #fff;
+}
+
+.contact_form input,
+.contact_form textarea {
+  color: #172b4d;
+}
+
+/* Typography */
+.logo {
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: 700;
+}
+
+.main_title {
+  font-size: 40px;
+  line-height: 52px;
+  font-weight: 800;
+}
+
+.project_title {
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 700;
+}
+
+.skills_title {
+  font-size: 20px;
   line-height: 24px;
   font-weight: 500;
 }
 
-.primary_title {
-  font-size: 40px;
-  line-height: 52px;
-  font-weight: 800;
+.skill_name {
+  font-size: 15px;
+  line-height: 20px;
+  font-weight: 500;
+}
+
+.descriptive_txt {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.project_info_txt {
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 600;
+}
+
+.contact_txt {
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.contact_form input,
+.contact_form textarea {
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+textarea::placeholder {
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 400;
 }
 
 .upper {
   text-transform: uppercase;
 }
 
-.material-icons.colored {
-  color: var(--primary_b);
+.fs_15 {
+  font-size: 15px;
 }
 
-.material-icons.grey {
-  color: #c1c7d0;
+.fw_med {
+  font-weight: 500;
+}
+
+.fw_bold {
+  font-weight: 700;
 }
 
 .material-icons.small {
   font-size: 10px;
 }
 
-/* buttons */
+/* Buttons */
 .btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
-  letter-spacing: 0.03em;
   font-weight: 500;
+  letter-spacing: 0.03em;
   border-radius: 8px;
   cursor: pointer;
 }
 
-.menu_btn {
+.xs-transparent_btn {
   background-color: transparent;
   border: transparent;
+  padding: 8px;
 }
 
-.btn_small {
-  font-size: 12px;
-  line-height: 16px;
-  padding: 4px 12px;
-}
-
-.btn_normal {
+.action_btn {
   font-size: 17px;
   line-height: 24px;
   padding: 12px;
 }
 
+form ul li .action_btn {
+  margin-bottom: 20px;
+  padding: 12px 16px;
+}
+
 .tag_btn {
+  font-size: 12px;
+  line-height: 16px;
+  padding: 4px 12px;
   background-color: #ebebff;
   color: var(--primary_b);
 }
@@ -142,38 +220,56 @@ body {
   background-color: #2230d2;
 }
 
-.disabled {
+.action_btn.disabled {
   color: #5e6c84;
   background-color: #fff;
   border: 1px solid #c1c7d0;
 }
 
-/* header  */
+/* Backgrounds */
+.shapes_bg {
+  background-image: url("./back-img/header-shapes-mobile@2x.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
+
+.contact-me_sect_bg {
+  background-image: url("./back-img/contact_form_shapes-mobile@2x.svg");
+  background-color: var(--primary_b);
+  background-repeat: no-repeat;
+  background-position: right 0 top 21px;
+  background-size: auto;
+}
+
+/* Header layout  */
 header {
-  width: 100%;
-  height: 48px;
   position: fixed;
   top: 0;
+  width: 100%;
+  height: 48px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  background-color: #fff;
   z-index: 1;
 }
 
-.logo_placeholder {
+.btn_flex {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-start;
+}
+
+.logo_placeholder {
   height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   margin: 4px;
 }
 
 .logo {
-  font-size: 18px;
-  line-height: 20px;
-  font-weight: 700;
   padding: 10px 12px;
 }
 
@@ -181,66 +277,41 @@ nav {
   margin-right: 24px;
 }
 
-/* main / headline section */
+/* main / headline section layout */
 main {
-  width: 100vw;
-  height: 674px;
   position: relative;
   top: 48px;
-  background-color: #fff;
+  width: 100vw;
+  height: 674px;
   border-bottom-left-radius: 85px;
 }
 
 .headline {
+  height: 97%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   gap: 12px;
-  height: 97%;
   margin: auto 0;
   padding: 0 24px;
 }
 
-.headline > * {
-  order: 999;
-}
-
-.shapes_bg {
-  background-image: url("./back-img/header-shapes-mobile@2x.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.headline hgroup {
-  order: 0;
-}
-
-.headline p {
-  order: 1;
-}
-
-.headline .connect {
-  order: 2;
-}
-
 .social {
-  order: 3;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 20px;
 }
 
-/* work section */
+/* Work section layout */
 .works_section,
 .about_section {
   width: 100%;
-  padding: 114px 24px;
   display: grid;
   grid-template-columns: 100%;
   gap: 88px;
+  padding: 114px 24px;
 }
 
 .work_card {
@@ -248,18 +319,21 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   gap: 12px;
-  padding: 16px;
-  background-color: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
+  margin: 0 auto;
+  padding: 16px;
 }
 
 .work_card img {
   height: 220px;
+  width: auto;
   border-radius: 8px;
+  margin: 0 auto;
 }
 
 .card_details {
+  max-width: 295px;
   display: flex;
   flex-direction: column;
   align-content: flex-start;
@@ -274,9 +348,6 @@ main {
 }
 
 .project_title {
-  font-size: 32px;
-  line-height: 44px;
-  font-weight: 700;
   padding-right: 1px;
 }
 
@@ -288,17 +359,6 @@ main {
   gap: 12px;
 }
 
-.project_details .projet_info {
-  font-size: 13px;
-  line-height: 16px;
-  font-weight: 600;
-}
-
-.card_details .primary_txt {
-  font-size: 15px;
-  font-weight: 400;
-}
-
 .tags {
   display: flex;
   justify-content: flex-start;
@@ -308,17 +368,14 @@ main {
 }
 
 .action {
-  order: 4;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-/* about section */
+/* About section layout */
 .about_base {
   position: relative;
-  height: 1263px;
-  background-color: #fff;
   border-top-right-radius: 85px;
 }
 
@@ -354,29 +411,21 @@ main {
   border-bottom: 1px solid #dfe1e6;
 }
 
-.skill_name {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
-  color: #000;
-}
-
 .expand_collapse {
   margin: 0 14px;
 }
 
 .skill_content {
-  padding: 12px;
   display: grid;
   grid-template-columns: 100%;
   gap: 12px;
+  padding: 12px;
 }
 
 .skill_item {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  background: #f7f7f9;
   border-radius: 8px;
 }
 
@@ -385,95 +434,46 @@ main {
   margin: 9px 16px 10px 12px;
 }
 
-.skill_item_name {
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-  color: #253858;
-}
-
-/* contact section */
+/* Contact section layout */
 .contact-me_section {
   border-top-left-radius: 85px;
-  padding: 0 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
 }
 
-.contact-me_sect_bg {
-  background-image: url("./back-img/contact_form_shapes-mobile@2x.svg");
-  background-color: var(--primary_b);
-  background-repeat: no-repeat;
-  background-position: right 0 top 21px;
-  background-size: auto;
+.contact-me_section .content_wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+  max-width: 569px;
+  margin: 0 24px;
 }
 
 .contact_title {
-  font-weight: 700;
-  color: #fff;
   margin-top: 103px;
 }
 
-.contact_txt {
-  font-size: 20px;
-  line-height: 28px;
-  color: #ebebff;
-  text-align: center;
-}
-
-.contact-form {
+form {
   width: 100%;
+  max-width: 447px;
 }
 
-.contact-form ul {
+.contact_form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 }
 
-.contact-form ul li {
+.contact_form li {
+  margin: 9px 0;
+}
+
+.contact_form input,
+.contact_form textarea {
   width: 100%;
-}
-
-.contact-form input,
-.contact-form textarea {
-  background-color: #fff;
-  color: #172b4d;
-  font-size: 17px;
-  line-height: 20px;
-  font-weight: normal;
   border: none;
   border-radius: 8px;
-  width: 100%;
-  margin: 9px auto;
   padding: 15px 16px;
-}
-
-textarea::placeholder {
-  font-family: "Poppins", sans-serif;
-  font-size: 15px;
-  line-height: 24px;
-  font-weight: normal;
-}
-
-.submit-button {
-  align-self: flex-start;
-  margin-bottom: 20px;
-  padding: 12px 16px;
-}
-
-.contact-me_section .contact-form .submit-button:hover {
-  color: #fff;
-  background-color: #6070ff;
-  border: 1px solid #fff;
-}
-
-.contact-me_section .contact-form .submit-button:active {
-  color: #fff;
-  background-color: #2230d2;
-  border: 1px solid #fff;
 }
 
 .bottom-separator {
